<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.braingang.mellow.hound.app.StatusFragment">

  <Button
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:text="@string/refresh"/>

  <TableLayout
      android:layout_below="@id/refresh"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:stretchColumns="1"
    android:id="@+id/tableLayout">

    <TableRow>
      <TextView style="@style/TextView01"
        android:layout_gravity="right"
        android:text="@string/operating_mode"/>
      <TextView style="@style/TextView01"
        android:id="@+id/operating_mode"
        android:layout_gravity="left"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/TextView01"
        android:layout_gravity="right"
        android:text="@string/last_sample_time"/>
      <TextView style="@style/TextView01"
        android:id="@+id/last_sample_time"
        android:layout_gravity="left"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/TextView01"
        android:layout_gravity="right"
        android:text="@string/upload_population"/>
      <TextView style="@style/TextView01"
        android:id="@+id/upload_population"
        android:layout_gravity="left"/>
    </TableRow>

    <TableRow>
      <TextView style="@style/TextView01"
        android:layout_gravity="right"
        android:text="@string/waiting_population"/>
      <TextView style="@style/TextView01"
        android:id="@+id/waiting_population"
        android:layout_gravity="left"/>
    </TableRow>
  </TableLayout>
</RelativeLayout>